--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,3 @@
-.App {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 500px;
-}
-
 html,
 body,
 *,
@@ -22,4 +15,33 @@ a:hover,
 input:hover,
 .hover:hover {
   cursor: none;
+}
+
+.App {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+}
+
+.cursor {
+  position: fixed;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #000;
+  pointer-events: none;
+  transition: transform 0.1s ease;
+  z-index: 9999;
+}
+
+.cursor--active {
+  background-color: red;
+  border-radius: 40px;
+  width: 30px;
+  height: 30px;
+}
+
+.cursor--hover {
+  background-color: yellow;
 }
